FIX: Media queries - mobile/tablet view - adjust menu pop up width so not squashed to the right of the screen

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -587,6 +587,15 @@ footer a {
         width: 240px
     }
 
+    .nav-link {
+        width: 40vw;
+    }
+
+    .navbar-nav {
+        --bs-nav-link-padding-x: 15px;
+    }
+
+
     /*--------------------------------------------Sign up section*/
     #sign-up {
         height: 130vh;
@@ -797,7 +806,7 @@ footer a {
     }
 
     .nav-link {
-        width: 20vw;
+        width: 30vw;
     }
 
     .navbar-nav {
